--- a/package.json
+++ b/package.json
@@ -9,14 +9,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.10.0",
+    "@supabase/supabase-js": "^2.45.0",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.0",
-    "@google/genai": "^1.10.0",
-    "@supabase/supabase-js": "^2.45.0"
+    "react-router-dom": "^7.7.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.12",
     "@types/node": "^22.14.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
   }
